# emdee

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  test.md  vite.config.js
.github/workflows/: deploy-site.yml  release.yml
scripts/: bump-version.sh  install.sh
site/: index.html  main.js  package-lock.json  package.json  style.css
site/public/: CNAME  install.ps1  install.sh
src/: copy-button.js  main.js  media.js  mermaid-loader.js  renderer.js  search.js  source-toggle.js  theme.js  toc.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsh
src-tauri/src/: cli_path.rs  lib.rs  pdf.rs  pdf_windows.rs
src-tauri/wix/: path.wxs
src/style/: app.css  print.css  prism-theme.css  search.css  source.css
