[package]
name = "emdee"
version = "0.1.0"
description = "A minimal cross-platform markdown viewer"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-deep-link = "2"
urlencoding = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
