[package]
name = "emdee"
version = "0.1.3"
description = "A minimal cross-platform markdown viewer"
authors = ["Talmo Pereira <talmo@talmolab.org>"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-deep-link = "2"
urlencoding = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
dirs = "6"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.56"
windows-sys = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData", "NSError", "NSURL", "NSString"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKPDFConfiguration"] }
block2 = "0.6"
core-foundation = "0.10"
